--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -225,97 +225,42 @@
                 <div class="row">
                     <div class="col-12 col-lg-8">
                         <div class="section-heading">
-                            <h6></h6>
+                            <h6>बड़ी ख़बरें </h6>
+                            <!-- popular news -->
                         </div>
     
                         <div class="row">
     
                             <!-- Single Post -->
+                            {% for item in queryset1|slice:"1:" %}
                             <div class="col-12 col-md-6">
                                 <div class="single-blog-post style-3">
                                     <div class="post-thumb">
-                                        <a href="#"><img src="img/bg-img/12.jpg" alt=""></a>
+                                        <a href="#"><img src="{{ item.image.url }}" alt=""></a>
                                     </div>
                                     <div class="post-data">
                                         <a href="#" class="post-catagory">Finance</a>
                                         <a href="#" class="post-title">
-                                            <h6>Dolor sit amet, consectetur adipiscing elit. Nam eu metus sit amet odio sodales placer. Sed varius leo ac...</h6>
+                                            <h6>{{ item.title }}</h6>
                                         </a>
-                                        <div class="post-meta d-flex align-items-center">
-                                            <a href="#" class="post-like"><img src="img/core-img/like.png" alt=""> <span>392</span></a>
-                                            <a href="#" class="post-comment"><img src="img/core-img/chat.png" alt=""> <span>10</span></a>
-                                        </div>
+                                        <p class="post-date"><span>7:00 AM</span> | <span>April 14</span></p>
                                     </div>
                                 </div>
                             </div>
-    
-                            <!-- Single Post -->
-                            <div class="col-12 col-md-6">
-                                <div class="single-blog-post style-3">
-                                    <div class="post-thumb">
-                                        <a href="#"><img src="img/bg-img/13.jpg" alt=""></a>
-                                    </div>
-                                    <div class="post-data">
-                                        <a href="#" class="post-catagory">Finance</a>
-                                        <a href="#" class="post-title">
-                                            <h6>Dolor sit amet, consectetur adipiscing elit. Nam eu metus sit amet odio sodales placer. Sed varius leo ac...</h6>
-                                        </a>
-                                        <div class="post-meta d-flex align-items-center">
-                                            <a href="#" class="post-like"><img src="img/core-img/like.png" alt=""> <span>392</span></a>
-                                            <a href="#" class="post-comment"><img src="img/core-img/chat.png" alt=""> <span>10</span></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-    
-                            <!-- Single Post -->
-                            <div class="col-12 col-md-6">
-                                <div class="single-blog-post style-3">
-                                    <div class="post-thumb">
-                                        <a href="#"><img src="img/bg-img/14.jpg" alt=""></a>
-                                    </div>
-                                    <div class="post-data">
-                                        <a href="#" class="post-catagory">Finance</a>
-                                        <a href="#" class="post-title">
-                                            <h6>Dolor sit amet, consectetur adipiscing elit. Nam eu metus sit amet odio sodales placer. Sed varius leo ac...</h6>
-                                        </a>
-                                        <div class="post-meta d-flex align-items-center">
-                                            <a href="#" class="post-like"><img src="img/core-img/like.png" alt=""> <span>392</span></a>
-                                            <a href="#" class="post-comment"><img src="img/core-img/chat.png" alt=""> <span>10</span></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-    
-                            <!-- Single Post -->
-                            <div class="col-12 col-md-6">
-                                <div class="single-blog-post style-3">
-                                    <div class="post-thumb">
-                                        <a href="#"><img src="img/bg-img/15.jpg" alt=""></a>
-                                    </div>
-                                    <div class="post-data">
-                                        <a href="#" class="post-catagory">Finance</a>
-                                        <a href="#" class="post-title">
-                                            <h6>Dolor sit amet, consectetur adipiscing elit. Nam eu metus sit amet odio sodales placer. Sed varius leo ac...</h6>
-                                        </a>
-                                        <div class="post-meta d-flex align-items-center">
-                                            <a href="#" class="post-like"><img src="img/core-img/like.png" alt=""> <span>392</span></a>
-                                            <a href="#" class="post-comment"><img src="img/core-img/chat.png" alt=""> <span>10</span></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            {% endfor %}
+                          
                         </div>
                     </div>
     
                     <div class="col-12 col-lg-4">
                         <div class="section-heading">
+                            <!-- recent news -->
                             <h6>ताज़ा ख़बरें</h6>
                         </div>
                         <!-- Popular News Widget -->
                         <div class="popular-news-widget mb-30">
                             
-                            {% for item in queryset0|slice:"1:" %}
+                            {% for item in queryset0|slice:"-1:-5:-1" %}
                             <!-- Single Popular Blog -->
                             <div class="single-popular-post">
                                 <a href="#">
