--- a/lokswar/templates/base.html
+++ b/lokswar/templates/base.html
@@ -25,17 +25,8 @@
     <link rel="stylesheet" href="{% static 'css/nice-select.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
 
-    <!-- ##### All Javascript Files ##### -->
-    <!-- jQuery-2.2.4 js -->
-    <script src="{% static 'js/jquery/jquery-2.2.4.min.js' %}"></script>
-    <!-- Popper js -->
-    <script src="{% static 'js/bootstrap/popper.min.js' %}"></script>
-    <!-- Bootstrap js -->
-    <script src="{% static 'js/bootstrap/bootstrap.min.js' %}"></script>
-    <!-- All Plugins js -->
-    <script src="{% static 'js/plugins/plugins.js' %}"></script>
-    <!-- Active js -->
-    <script src="{% static 'js/active.js' %}"></script>
+   
+    
 
     <STYLE>
     .post-title{text-decoration: none;} 
@@ -56,24 +47,24 @@
                         <div class="top-header-content d-flex align-items-center justify-content-between">
                             <!-- Logo -->
                             <div class="logo">
-                                <a href="index.html"><img src="{% static 'img/core-img/logo.png' %}" alt=""></a>
+                                <a href="index.html"><img src="{% static 'img/core-img/thelokswar.png' %}" alt=""></a>
                             </div>
 
                             <!-- Login Search Area -->
-                            <div class="login-search-area d-flex align-items-center">
+                            <!-- <div class="login-search-area d-flex align-items-center"> -->
                                 <!-- Login -->
-                                <div class="login d-flex">
+                                <!-- <div class="login d-flex">
                                     <a href="#">Login</a>
                                     <a href="#">Register</a>
-                                </div>
+                                </div> -->
                                 <!-- Search Form -->
-                                <div class="search-form">
+                                <!-- <div class="search-form">
                                     <form action="#" method="post">
                                         <input type="search" name="search" class="form-control" placeholder="Search">
                                         <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
                                     </form>
-                                </div>
-                            </div>
+                                </div> -->
+                            <!-- </div> -->
                         </div>
                     </div>
                 </div>
@@ -89,7 +80,7 @@
 
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html"><img src="{% static 'img/core-img/logo.png' %}" alt=""></a>
+                            <a href="index.html"><img src="{% static 'img/core-img/thelokswar.png' %}" alt=""></a>
                         </div>
 
                         <!-- Navbar Toggler -->
@@ -336,6 +327,17 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         </div>
     </footer>
     <!-- ##### Footer Area Start ##### -->
+     <!-- ##### All Javascript Files ##### -->
+    <!-- jQuery-2.2.4 js -->
+    <script src="{% static 'js/jquery/jquery-2.2.4.min.js' %}"></script>
+    <!-- Popper js -->
+    <script src="{% static 'js/bootstrap/popper.min.js' %}"></script>
+    <!-- Bootstrap js -->
+    <script src="{% static 'js/bootstrap/bootstrap.min.js' %}"></script>
+    <!-- All Plugins js -->
+    <script src="{% static 'js/plugins/plugins.js' %}"></script>
+    <!-- Active js -->
+    <script src="{% static 'js/active.js' %}"></script>
 
 </body>
 
