--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -103,7 +103,7 @@
                                 {% for item in queryset|slice:":-2"%}
                                 <div class="single-blog-post featured-post-2">
                                     <div class="post-thumb">
-                                        <a href="#"><img src="{{ item.image.url }}" alt=""></a>
+                                        <a href="{% url 'home_detail' %}"><img src="{{ item.image.url }}" alt=""></a>
                                     </div>
                                     <div class="post-data">
                                         <a href="#" class="post-catagory">Finance</a>
