--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -62,15 +62,15 @@
                             <div class="col-12 col-lg-7">
                                 <div class="single-blog-post featured-post">
                                     <div class="post-thumb">
-                                        <a href="#"><img src="{{ item.image.url }}" alt=""></a>
+                                        <a href="{{ item.get_absolute_url }}"><img src="{{ item.image.url }}" alt=""></a>
                                     </div>
                                     <div class="post-data">
                                         
-                                        <a href="#" class="post-title">
+                                        <a href="{{ item.get_absolute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
                                         <div class="post-meta">
-                                            <p class="post-author">By <a href="#">{{ item.author }}</a></p>
+                                            <p class="post-author">By {{ item.author }}</p>
                                             <p class="post-excerp">{{ item.description }}</p>
                                             <!-- Post Like & Post Comment -->
                                             <p class="post-date"><span>{{ item.date }}</span></p>
@@ -103,7 +103,7 @@
                                 {% for item in queryset|slice:":-2"%}
                                 <div class="single-blog-post featured-post-2">
                                     <div class="post-thumb">
-                                        <a href="{% url 'home_detail' %}"><img src="{{ item.image.url }}" alt=""></a>
+                                        <a href="#"><img src="{{ item.image.url }}" alt=""></a>
                                     </div>
                                     <div class="post-data">
                                         <a href="#" class="post-catagory">Finance</a>
